Slightly fixed IE align problem
git-svn-id: svn://localhost/home/nikhil/repository/pixelframe/trunk@366 7e96f2c5-ff98-4bf4-9c58-b8ea98d1b7b6

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -54,8 +54,9 @@ img#main-image {
 
 div#prev-button, div#next-button {
     background:#555;
-    width:50%;
+    width:49%;
     float:left;
+    display:inline;
 }
 
 div#prev-button:hover, div#next-button:hover {
